# gtm-sdk

./: .bazelignore  .bazelrc  .coderabbit.yaml  .env.example  .git-blame-ignore-revs  .git-ignore-revs  .gitignore  .roborev.toml  .vale.ini  AGENTS.md  BUILD.bazel  CHANGELOG.md  DOLT_REMOTE.md  LICENSE  MODULE.bazel  README.md  conductor.json  deploy.py  gazelle_python.yaml  manifest  pyproject.toml  pyrefly.toml  requirements_bazel.txt  ruff.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.beads/hooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.conductor/: settings.toml
.entire/: settings.json
.flox/: env.json
.flox/env/: manifest.toml
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: docs-checks.yml  integration.yml  test.yml  tests-integration.yml  tests-unit.yml  trunk-check.yml
.kilo/: run-script  setup-script
.trunk/: trunk.yaml
0e/2116e1c059/: metadata.json
13/148e494143/: metadata.json
14/fa005e8511/: metadata.json
32/e518136f36/: metadata.json
api/samples/: caldotcom.booking.cancelled.redacted.json  caldotcom.booking.created.redacted.json  caldotcom.booking.created.v2.redacted.json  caldotcom.booking.no_show_updated.redacted.json  caldotcom.booking.requested.v2.redacted.json  caldotcom.booking.rescheduled.redacted.json  caldotcom.meeting.ended.redacted.json  caldotcom.meeting.started.redacted.json  caldotcom.ping.redacted.json  fathom.list_meetings.redacted.json  fathom.recording.redacted.json  octolens.mention.created.dev.redacted.json  (+13 more)
bazel/: BUILD.bazel  pytest_main.py  pytest_test.bzl
cli/: __main__.py  json_encoder.py  json_validation.py  main.py
data/: caldotcom_events.json
data_gen/: __init__.py
design/: 2026-05-12-octolens-mentions-attio-custom-object.md
designs/: 2026-05-12-octolens-mentions-attio-custom-object.md
docs/: .mintignore  .vale.ini  DASH0_SETUP.md  GRAFANA_SETUP.md  ai-tools.mdx  docs.json  index.mdx  installation.mdx  quickstart.mdx  secrets.mdx
libs/: BUILD.bazel  __init__.py  modal_app.py  telemetry.py
libs/apollo/: BUILD.bazel  client.py  models.py  organizations.py  people.py
libs/attio/: BUILD.bazel  attributes.py  client.py  companies.py  contracts.py  errors.py  ext_tam.py  gtm_content.py  meetings.py  mentions.py  models.py  notes.py  objects.py  people.py  preflight.py  sdk_boundary.py  tracking_events.py  upload_parsers.py  values.py
libs/attio/models/: __init__.py  attributes.py  companies.py  ext_tam.py  gtm_content.py  meetings.py  mentions.py  notes.py  objects.py  people.py  tracking_events.py
libs/browserbase/: BUILD.bazel  db.py  gmail_dom.py
libs/caldotcom/: BUILD.bazel  __init__.py  client.py  models.py
libs/dlt/: BUILD.bazel  __init__.py  destination_type.py  filesystem_gcp.py  filesystem_local.py  filesystem_types.py
libs/exa/: BUILD.bazel  __init__.py  client.py  companies.py  errors.py  models.py  people.py  search.py  types.py
libs/fathom/: BUILD.bazel  __init__.py  client.py  errors.py  from_sdk.py  models.py
libs/filesystem/: BUILD.bazel  __init__.py  files.py  filesystem.py  filesystem_regex.py  refs.py  regex.py
libs/fireflies/: BUILD.bazel  __init__.py  models.py
libs/gmail/: BUILD.bazel  url_decoder.py
libs/granola/: BUILD.bazel  README.md  api_client.py  errors.py  local_cache.py  models.py  normalize.py  state.py  writer.py
libs/harvest/: BUILD.bazel  client.py  leads.py  models.py  profile.py
libs/infisical/: BUILD.bazel  __init__.py  client.py  errors.py
libs/linear/: BUILD.bazel  __init__.py  client.py
libs/linkedin/: BUILD.bazel  __init__.py  api_helpers.py  member_data.py
libs/logging/: BUILD.bazel  __init__.py  structured.py
libs/meetings/: BUILD.bazel  __init__.py  uid.py
libs/motherduck/: BUILD.bazel  __init__.py  client.py
libs/octolens/: BUILD.bazel  __init__.py  client.py  models.py
libs/openai/: BUILD.bazel  lead_extraction.py
libs/parallel/: BUILD.bazel  __init__.py  client.py  models.py  types.py
libs/parsers/: BUILD.bazel  __init__.py  constants.py  contacts.py  countries.py  dataframes.py  normalization.py
libs/perplexity/: BUILD.bazel  model_chat_completion.py  model_chat_response.py  perplexity_client.py  perplexity_description_resolver_prompts.py
libs/rb2b/: BUILD.bazel  __init__.py  models.py
libs/reliability/: circuit_breaker.py
libs/resend/: BUILD.bazel  email.py
libs/sanity/: BUILD.bazel  __init__.py  blog.py  client.py  errors.py  models.py  portable_text.py
libs/slack/: BUILD.bazel  __init__.py  client.py  messages.py
libs/webhook/: BUILD.bazel  filter.py  protocol.py
scripts/: __init__.py  agent-skills-sync.py  attio-bootstrap-people.py  attio-bootstrap-social_mentions.py  attio-bootstrap-tracking_events.py  attio-find-orphan-meetings.py  attio-inspect-meeting-relationship.py  attio-meeting_relationship-inspect.py  attio-people-bootstrap.py  attio-probe_workspace_slug.py  attio-social_mentions-bootstrap.py  attio-tracking_events-bootstrap.py  attio-workspace_slug-probe.py  attio-workspace_url-emit.py  bazel-requirements-sync.py  beads-sync-to-rig.py  caldotcom-backfill-bookings.py  caldotcom-bookings-backfill.py  ci-suite-validate.py  ci.py  conductor-workspace-setup.sh  dagger-tools-setup.py  deploy-webhook.sh  deploy_webhook.sh  docs-cli_reference-generate.py  docs-pages-lint.py  entire-hooks-setup.py  fathom-attio_meetings-backfill.py  fathom-backfill-attio-meetings.py  fireflies-attio_meetings-backfill.py  fireflies-backfill-attio-meetings.py  hookdeck-connection_events-dump.py  hookdeck-dump-connection-events.py  hookdeck-webhook-wire.py  hookdeck_dump_connection_events.py  octolens-backfill-mentions.py  octolens-mentions-backfill.py  rb2b-event_ids-reconcile.py  rb2b-reconcile-event-ids.py  rb2b-visits-backfill.py  (+15 more)
src/: api_keys.py  app.py  enrichment.py  modal_app.py  otel_collector.py  secrets_bootstrap.py
tests/: conftest.py  test_cli_validation_error.py  test_smoke_telemetry.py  test_validation_type_error.py
webhooks/: README.md  export_to_attio.py  export_to_gcp_etl.py  export_to_gcp_raw.py  export_to_slack.py
(+353 files in other folders)
