[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gtm"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "attio>=0.22.8",
  "boto3>=1.42.95",
  "dlt[deltalake,motherduck]>=1.0",
  "fastapi[standard]",
  "flatsplode>=0.2.0",
  "gcsfs>=2024.10.0",
  "gtm-apollo>=0.0.2",
  "ibis-framework[duckdb]",
  "modal",
  "orjson>=3.10.0",
  "parallel-web",
  "polars>=1.10.0",
  "pydantic>=2.0",
  "requests>=2.33.1",
  "typer>=0.15",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp-proto-http",
  "opentelemetry-semantic-conventions",
  "dlthub>=0.22.1",
  "logfire>=4.32.1",
  "openai>=2.34.0",
  "emoji>=2.15.0",
  "phonenumbers>=9.0.29",
  "resend>=2.30.0",
  "uuid7>=0.1.0",
  "dagger-io>=0.20.8",
]

[tool.setuptools.packages.find]
include = ["cli*", "data_gen*", "libs*", "src*"]
exclude = ["tests*"]

[project.scripts]
gtm = "cli.main:run"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "pytest>=9.0.2",
  "pytest-asyncio>=0.24.0",
  "pytest-xdist>=3.0.0",
]
