[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gtm"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "attio>=0.22.8",
  "boto3>=1.43.41",
  "dlt[duckdb,motherduck]>=1.0",
  # Imported directly by libs/motherduck (md: connections). Already transitive
  # via dlt[duckdb], but declared explicitly since we import the package.
  "duckdb>=1.0",
  "exa-py>=2.16.0",
  "fastapi[standard]",
  "flatsplode>=0.2.0",
  "gcsfs>=2026.7.0",
  "gtm-apollo>=0.0.2",
  "gtm-linear>=0.0.2",
  "ibis-framework",
  "infisicalsdk>=1.0.16",
  "modal",
  "narwhals>=2.21.0",
  "orjson>=3.10.0",
  "parallel-web",
  "pyarrow>=18.0.0",
  "pydantic>=2.13.4",
  "requests>=2.33.1",
  "typer>=0.15",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp-proto-http",
  "opentelemetry-semantic-conventions",
  # dlthub -> python-jose -> ecdsa pulls in CVE-2024-23342 (Minerva P-256 timing
  # attack). No upstream fix exists; the vulnerable ECDSA signing path is unused
  # here. Dependabot alert #1 dismissed as not_used (ai-h36).
  "dlthub>=0.27.0",
  "logfire>=4.32.1",
  "openai>=2.34.0",
  "emoji>=2.15.0",
  "phonenumbers>=9.0.34",
  "resend>=2.30.0",
  "uuid7>=0.1.0",
  "dagger-io>=0.21.7",
  "pyyaml>=6.0.3",
  "types-pyyaml>=6.0.12.20260510",
  "pycountry>=24.0.0",
  "fathom-python>=0.0.30",
  "slack-sdk>=3.27",
]

[project.optional-dependencies]
marketplace = ["polars>=1.10.0"]

[tool.setuptools.packages.find]
include = ["cli*", "libs*", "scripts*", "src*"]
exclude = ["tests*"]

[project.scripts]
gtm = "cli.main:run"

[tool.uv]
required-version = ">=0.11.26,<0.12"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -m 'not integration'"
filterwarnings = [
  # jsonpath-python 1.1.6 (latest; pulled in transitively via fathom-python) touches
  # deprecated ast.Num/Str/Bytes/NameConstant at import time. Not fixable upstream yet.
  "ignore::DeprecationWarning:jsonpath.jsonpath",
]
markers = [
  "integration: tests that hit live external APIs (require credentials; run with `-m integration`)",
]

[tool.pyright]
# Explicit venv discovery so pyright resolves third-party types both locally and
# inside the Dagger CI container (where trunk's sandboxed PATH otherwise picks
# system python and pyright reports every project import as "could not be
# resolved from source").
venvPath = "."
venv = ".venv"
pythonPath = ".venv/bin/python"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "pytest>=9.0.2",
  "pytest-asyncio>=0.24.0",
  "pytest-xdist>=3.0.0",
  "setuptools>=83.0.0",
]
