"""Bazel package for the ``libs/attio`` adapter (project mode).

PR2 Task 11 (plan ai-m4p9.9). Each external-service adapter is a single
project-mode ownership unit: Gazelle generates one ``py_library`` covering
this directory and any nested packages that lack their own ``BUILD.bazel``
(e.g. ``models/``), so the adapter stays one importable, independently
buildable target with no unreviewed nested package.

The private ``architecture_sources`` filegroup exposes the adapter's full
recursive source corpus to the import-boundary test
(``//tests/architecture:test_import_boundaries``, Task 12) as test ``data``
only — never a production ``dep`` (plan constraint: architecture filegroups
are not production dependencies).
"""

# One py_library for the whole adapter, folding nested packages that have no
# BUILD.bazel of their own (project mode collects subdirectory sources).
# gazelle:python_generation_mode project

load("@rules_python//python:defs.bzl", "py_library")

filegroup(
    name = "architecture_sources",
    srcs = glob(["**/*.py"]),
    visibility = ["//tests/architecture:__pkg__"],
)

py_library(
    name = "attio",
    srcs = [
        "__init__.py",
        "attributes.py",
        "client.py",
        "companies.py",
        "contracts.py",
        "errors.py",
        "ext_tam.py",
        "gtm_content.py",
        "meetings.py",
        "mentions.py",
        "models/__init__.py",
        "models/attributes.py",
        "models/companies.py",
        "models/ext_tam.py",
        "models/gtm_content.py",
        "models/meetings.py",
        "models/mentions.py",
        "models/notes.py",
        "models/objects.py",
        "models/people.py",
        "models/tracking_events.py",
        "notes.py",
        "objects.py",
        "people.py",
        "preflight.py",
        "sdk_boundary.py",
        "tracking_events.py",
        "upload_parsers.py",
        "values.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//attio",
        "@pip//pydantic",
    ],
)
